syntax = "proto3";

package dspike.proto;

// Message present a message
message Message {
    enum Direction {
      core2core = 0;
      core2llb = 1;
      llb2core = 2;
      llb2ddr = 3;
      ddr2llb = 4;
    }
    enum StreamType {
      message = 0;
      rdma = 1;
    }
    Direction direction = 1;
    int32 source = 2;
    int32 target = 3;
    bool  forwarding = 4;
    bytes body = 5;
    int32 tag = 6;
    StreamType type = 7;
    int32 srcAddr = 8;
    int32 dstAddr = 9;
    int32 length = 10;
}

// DMAXferPollResponse present a response from DMA transfer poll
message DMAXferPollResponse {
    bool busy = 1;
}

message DumpInfo {
    int32 spikeId = 1;
    int32 dumpId = 2;
    int32 timestamp = 3;
    int32 start = 4;
    int32 length = 5;
    int32 syncCount = 6;
}

// DumpParam present a param for spike to do dump
message DumpParam {
    oneof trigger {
        bool now = 1;
        bool onsync = 2;
    }
    int32 start = 4;
    int32 length = 5;
}